@@ -81,9 +81,10 @@ Object scheme::labelEx(VM* theVM, int argc, const Object* argv)
     DeclareProcedureName("$label");
     checkArgumentLength(1);
     const Object label = Object::makeVector(3);
-    label.toVector()->set(0, Object::makeFixnum(LABEL));
-    label.toVector()->set(1, argv[0]);
-    label.toVector()->set(2, Object::False);
+    Vector* const v = label.toVector();
+    v->set(0, Object::makeFixnum(LABEL));
+    v->set(1, argv[0]);
+    v->set(2, Object::False);
     return label;
 }
 
